Correçao de classes de resposta da Api